implemented logic within 50 LOC